
New in 0.1.5:

- suppor vSphere 5.0
- added suspend method to VM
- added quick vm properties for disks and files info
- implemented VIProperty to access vm objects properties as defined in vSphere API reference
- Fixed error in get registered vms triggered on empty hosts or with faulty vms
- Fixed '..' in import statements for compatibility with python 2.4
- Added VM guest operations: create/delete/rename files and directories, upload/download files, start/stop/list processes
- FIxed bugs in performance manager
- FIxes issue in ZSI triggered when parsing dates prior to year 1970

New in 0.1.6

- Added methods to VITask: get_result, get_progress, cancel
- Added clone method to VIVirtualMachine
- Added get_question method to VM (returns object with question info and answer method)
- Fix bug in get_vm_by_path
- Added method get_datastores in VIServer
- Fixed issues 3, 4
- Added method migrate in VIVirtualMachine
- Added VIMor class
- Multithread support

Roadmap for in 0.1.7

- Advanced filters parameter in VIServer.get_registered_vms
- Set connection sockets timeout (works only since python 2.6)
- added support for historical metrics in performance manager
- Add get_api_type method to VIServer
- Several fixes
- Changes in ZSI framework to ease portability to python 3